Revert "composer name change"
This reverts commit 21d7c927bf4546c3035a8966102df566d43c5781.

--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-  "name": "simkojacint/gkkr-api",
+  "name": "futurewebcms2024/gkkr-api",
   "description": "GKKR API for FuturewebCMS 2024",
   "keywords": [
     "futurewebcms2024 futureweb gkkr"
   ],
   "license": "proprietary",
   "type": "library",
-  "version": "1.1",
+  "version": "1.0",
   "authors": [
     {
       "name": "Jácint Simkó",
